syntax = "proto3";
package ununifi.incentive;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/UnUniFi/chain/deprecated/x/incentive/types";

service Msg {
  rpc ClaimCdpMintingReward(MsgClaimCdpMintingReward) returns (MsgClaimCdpMintingRewardResponse);
}

message MsgClaimCdpMintingReward {
  string sender = 1 [
    (gogoproto.moretags) = "yaml:\"sender\"",
    (gogoproto.customtype) = "github.com/UnUniFi/chain/types.StringAccAddress",
    (gogoproto.nullable) = false
  ];
  string multiplier_name = 2 [(gogoproto.moretags) = "yaml:\"multiplier_name\""];
}

message MsgClaimCdpMintingRewardResponse {}