syntax = "proto3";
package botany.incentive;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/lcnem/jpyx/x/incentive/types";

message BaseClaim {
    string owner = 1 [
      (gogoproto.moretags) = "yaml:\"owner\"",
      (gogoproto.customtype) = "github.com/lcnem/jpyx/types.StringAccAddress",
      (gogoproto.nullable) = false
    ];
    cosmos.base.v1beta1.Coin reward = 2 [
      (gogoproto.moretags) = "yaml:\"reward\"",
      (gogoproto.nullable) = false
    ];
  }

message BaseMultiClaim {
  string owner = 1 [
    (gogoproto.moretags) = "yaml:\"owner\"",
    (gogoproto.customtype) = "github.com/lcnem/jpyx/types.StringAccAddress",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.Coin reward = 2 [
    (gogoproto.moretags) = "yaml:\"rewards\"",
    (gogoproto.nullable) = false
  ];
}

message CdpMintingClaim {
  BaseClaim base_claim = 1 [
    (gogoproto.moretags) = "yaml:\"base_claim\"",
    (gogoproto.embed) = true
  ];
  repeated RewardIndex reward_indexes= 2 [
    (gogoproto.moretags) = "yaml:\"reward_indexes\"",
    (gogoproto.nullable) = false
  ];
}

message RewardIndex {
  string collateral_type = 1 [(gogoproto.moretags) = "yaml:\"collateral_type\""];
  string reward_factor = 2 [
    (gogoproto.moretags) = "yaml:\"reward_factor\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
    
message MsgClaimCdpMintingReward {
  string sender = 1 [
    (gogoproto.moretags) = "yaml:\"sender\"",
    (gogoproto.customtype) = "github.com/lcnem/jpyx/types.StringAccAddress",
    (gogoproto.nullable) = false
  ];
  string multiplier_name = 2 [(gogoproto.moretags) = "yaml:\"multiplier_name\""];
}

message Params {
  repeated RewardPeriod cdp_minting_reward_periods = 1 [
    (gogoproto.moretags) = "yaml:\"cdp_minting_reward_periods\"",
    (gogoproto.nullable) = false
  ];
  repeated Multiplier claim_multipliers = 2 [
    (gogoproto.moretags) = "yaml:\"claim_multipliers\"",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp claim_end = 3 [
    (gogoproto.moretags) = "yaml:\"claim_end\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

message RewardPeriod {
  bool active = 1 [(gogoproto.moretags) = "yaml:\"active\""];
  string collateral_type = 2 [(gogoproto.moretags) = "yaml:\"collateral_type\""];
  google.protobuf.Timestamp start = 3 [
    (gogoproto.moretags) = "yaml:\"start\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp end = 4 [
    (gogoproto.moretags) = "yaml:\"end\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  cosmos.base.v1beta1.Coin rewards_per_second = 5 [
    (gogoproto.moretags) = "yaml:\"rewards_per_second\"",
    (gogoproto.nullable) = false
  ];
}

message Multiplier {
  string name = 1 [(gogoproto.moretags) = "yaml:\"name\""];
  int64 months_lockup = 2 [(gogoproto.moretags) = "yaml:\"months_lockup\""];
  string factor = 3 [
    (gogoproto.moretags) = "yaml:\"factor\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
